--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ deps.yarn=[VERSIONED]
 deps.fabric-loader=0.14.21
 deps.modmenu=[VERSIONED]
 deps.cloth-config=[VERSIONED]
+
+TOKEN_MODRINTH=''
+TOKEN_CURSEFORGE=''
